@@ -112,6 +112,14 @@ flat_sun_min = -7
 ; if you want to have flats in -7; -5 interval).
 flat_sun_max = -5
 
+; Telescope speed (in degrees/seconds). Average telescope movement speed.
+; Should include overhead for ramp up/down times. Typically you will set this to 
+; 30-50 % of top telescope speed, depending on how long is the ramp and how much 
+; it spend on additional overheads. You can get estimate of average speed by running
+; rts2-nightreport on some full nights - average telescope movement speed is
+; printed with every observation in the output list. Default to 0.
+; telescope_speed = 0
+
 ; Default camera name. Used by rts2-target when camera name is not specified.
 ; default_camera = NULL
 
@@ -379,6 +387,16 @@ after_exposure_cmd_timoout = 10
 ; Arguments to pass to command after exposure. Actually expand string, similar
 ; to one uses for file paths. Please see man rts2.ini for details.
 after_exposure_cmd_arg = "%x%m%d"
+
+; Camera readout time (in seconds). If set, script length for the camera will include
+; CCD readout time. Default to 0.
+; readout_time = 0
+
+; Filter moving time (in seconds). If set, script length for the camera will include 
+; time for moving the filter. In current implementation dump, cannot count filters to move
+; and calculate filter movement time depending on how long filter wheel must move (e.g. how many
+; filters are between target and current filter). Default to 0.
+; filter_movement = 0
 
 [xmlrpcd]
 
