@@ -1,3 +1,6 @@
+2011-11-26
+ * telescope_speed, filter_movement and readout_time configutation options
+
 2011-11-25
  * added daemon's --autorestart parameter
 
